# DesktopScreen

./: CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  main.c
main/inc/: ds_system_data.h
main/inc/driver/: ds_ft6336.h  ds_screen.h
main/inc/fs/: ds_spiffs.h
main/inc/hal/: ds_gpio.h  ds_iic.h  ds_nvs.h  ds_spi.h  ds_timer.h
main/inc/net/: ds_wifi_ap.h
main/src/: ds_system_data.c
main/src/driver/: ds_ft6336.c  ds_screen.c
main/src/fs/: ds_spiffs.c
main/src/hal/: ds_gpio.c  ds_iic.c  ds_nvs.c  ds_spi.c  ds_timer.c
main/src/net/: ds_wifi_ap.c
