idf_component_register(SRCS 
                        "main.c"
                        "src/ds_system_data.c"
                        "src/hal/ds_timer.c"
                        "src/fs/ds_spiffs.c"
                        "src/hal/ds_nvs.c"
                        "src/hal/ds_gpio.c"
                        "src/hal/ds_iic.c"
                        "src/driver/ds_ft6336.c"
                        "src/hal/ds_spi.c"
                        "src/driver/ds_screen.c"
                        "src/net/ds_wifi_ap.c"
                    INCLUDE_DIRS 
                        "."
                        "inc"
                        "inc/hal"
                        "inc/fs"
                        "inc/driver"
                        "inc/data"
                        "inc/net")